hugr-llvm/src/emit/snapshots/hugr_llvm__emit__test__test_fns__diverse_module_children@pre-mem2reg@llvm14.snap
---
source: src/emit/test.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define void @_hl.f1.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  ret void
}

define void @_hl.f2.4() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  ret void
}
